🔧 (package.json): add 'start' script to run 'bun preview' command for starting the app 🔧 (package.json): update 'preview' script to include 'tsc && vite build' before running 'vite preview --host' for better build process ♻️ (frames.tsx): refactor classNames in Frames component to improve readability and maintainability ♻️ (video-editor.tsx): refactor classNames in VideoEditor component to improve readability and maintainability ♻️ (video-preview.tsx): refactor logic in VideoPreview component to use seekRef.current instead of calculating currentVideoPosition for better accuracy 🔧 (index.css): add 'overflow-x: clip' to body to prevent horizontal scrolling on smaller screens ⬆️ (tailwind.config.js): add custom 'xs' screen size at 475px and extend default screens for better responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -38,4 +38,5 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100svh;
+  overflow-x: clip;
 }
